fixing issues with readme and jupyter file

--- a/main.ipynb
+++ b/main.ipynb
@@ -84,15 +84,14 @@
     "* `magnitude` Ex: 0.75, 60, 0.88, 2.75\n",
     "The measured extent of the magnitude type ~ only used for wind speeds (in knots) and hail size\n",
     "(in inches to the hundredth).\n",
-    "magnitude_type Ex: EG, MS, MG, ES\n",
+    "* `magnitude_type`: Ex: EG, MS, MG, ES\n",
     "EG = Wind Estimated Gust; \n",
     "ES = Estimated Sustained Wind; \n",
     "MS = Measured Sustained Wind;\n",
     "MG = Measured Wind Gust (no magnitude is included for instances of hail).\n",
     "* `flood_cause` Ex: Ice Jam, Heavy Rain, Heavy Rain/Snow Melt\n",
     "Reported or estimated cause of the flood.\n",
-    "category\n",
-    "Unknown (During the time of downloading this particular file, NCDC has never seen anything\n",
+    "* `category` Unknown (During the time of downloading this particular file, NCDC has never seen anything\n",
     "provided within this field.)\n",
     "* `tor_f_scale` Ex: EF0, EF1, EF2, EF3, EF4, EF5\n",
     "Enhanced Fujita Scale describes the strength of the tornado based on the amount and type of\n",
