implementing load into pandas

--- a/main.ipynb
+++ b/main.ipynb
@@ -155,31 +155,51 @@
     "\n",
     "> **This section takes a bit of time, please wait until it completes downloading all datases**.\n",
     "\n",
-    "First all files needs to be downloaded from bulk download website. The website provides files from 1950 until current year. To automate the download will use BeatifulSoup to scrape the website and download all csv datasets. The desired files have the extension as `.csv.gz`. The files will be saved to datasets folder. "
+    "First all files needs to be downloaded from bulk download website. The website provides files from 1950 until current year. The library BeatifulSoup allows to scrape the website and download all csv datasets. The desired files have the extension as `.csv.gz` and a name pattern well defined. The files will be saved to datasets folder. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "146 content found for url https://www1.ncdc.noaa.gov/pub/data/swdi/stormevents/csvfiles regex StormEvents_(details|fatalities).*\n",
+      "Downloading 146 files to datasets folder\n",
+      "All files downloaded!\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "\n",
     "\n",
-    "bulk_url = 'https://www1.ncdc.noaa.gov/pub/data/swdi/stormevents/csvfiles/'\n",
-    "html_text = requests.get(bulk_url).text\n",
-    "soup = BeautifulSoup(html_text,'html.parser')\n",
-    "files = []\n",
-    "for link in soup.find_all(href=re.compile(\"\\\\.csv\\\\.gz\")):\n",
-    "    file_link = link.get('href')\n",
-    "    files.append(file_link)\n",
-    "    download_url = \"{}/{}\".format(bulk_url,file_link)\n",
-    "    r = requests.get(download_url,allow_redirects=True)\n",
-    "    with open(\"datasets/{}\".format(file_link), 'wb') as f:\n",
-    "        f.write(r.content)\n",
+    "def scrape_website_for_download_link(url, regex):\n",
+    "    html_text = requests.get(bulk_url).text\n",
+    "    soup = BeautifulSoup(html_text,'html.parser')\n",
+    "    content = []\n",
+    "    for tag in soup.find_all(href=re.compile(regex)):\n",
+    "        tag_content = tag.get('href')\n",
+    "        content.append(tag_content)\n",
+    "    print(\"{} content found for url {} regex {}\".format(len(content),url,regex))\n",
+    "    return content\n",
+    "\n",
+    "def download_files_to_folder(download_url,files,destination_folder):\n",
+    "    print(\"Downloading {} files to {} folder\".format(len(files),destination_folder))\n",
+    "    for file in files:\n",
+    "        r = requests.get(\"{}/{}\".format(download_url,file),allow_redirects=True)\n",
+    "        with open(\"{}/{}\".format(destination_folder,file), 'wb') as f:\n",
+    "            f.write(r.content)\n",
+    "    print(\"All files downloaded!\")\n",
+    "\n",
+    "bulk_url = 'https://www1.ncdc.noaa.gov/pub/data/swdi/stormevents/csvfiles'\n",
+    "links = scrape_website_for_download_link(bulk_url,\"StormEvents_(details|fatalities).*\")\n",
+    "download_files_to_folder(bulk_url,links,\"datasets\")\n",
     " "
    ]
   },
@@ -190,253 +210,112 @@
    },
    "source": [
     "### Loading datasets into Pandas\n",
-    "After downloading the datasets, will load all files into Pandas"
+    "After downloading the datasets, they need to be loaded into Pandas Dataframe. As mentioned above, only a subset of features will be used.\n",
+    "The strategy is to join the Storm details and fatalities dataset for each year, and append to a parent dataset that will hold all data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "(2171, 51)\n",
-      "(19, 11)\n"
+      "/tmp/ipykernel_11472/3852773624.py:16: DtypeWarning: Columns (28) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(f, usecols=columns)\n",
+      "/tmp/ipykernel_11472/3852773624.py:16: DtypeWarning: Columns (28) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(f, usecols=columns)\n",
+      "/tmp/ipykernel_11472/3852773624.py:16: DtypeWarning: Columns (28) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(f, usecols=columns)\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>BEGIN_YEARMONTH</th>\n",
-       "      <th>BEGIN_DAY</th>\n",
-       "      <th>BEGIN_TIME</th>\n",
-       "      <th>END_YEARMONTH</th>\n",
-       "      <th>END_DAY</th>\n",
-       "      <th>END_TIME</th>\n",
-       "      <th>EPISODE_ID</th>\n",
-       "      <th>EVENT_ID</th>\n",
-       "      <th>STATE</th>\n",
-       "      <th>STATE_FIPS</th>\n",
-       "      <th>...</th>\n",
-       "      <th>FAT_YEARMONTH</th>\n",
-       "      <th>FAT_DAY</th>\n",
-       "      <th>FAT_TIME</th>\n",
-       "      <th>FATALITY_ID</th>\n",
-       "      <th>FATALITY_TYPE</th>\n",
-       "      <th>FATALITY_DATE</th>\n",
-       "      <th>FATALITY_AGE</th>\n",
-       "      <th>FATALITY_SEX</th>\n",
-       "      <th>FATALITY_LOCATION</th>\n",
-       "      <th>EVENT_YEARMONTH</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>197204</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1840</td>\n",
-       "      <td>197204</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1840</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>9983345</td>\n",
-       "      <td>ARKANSAS</td>\n",
-       "      <td>5</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>197201</td>\n",
-       "      <td>9</td>\n",
-       "      <td>2320</td>\n",
-       "      <td>197201</td>\n",
-       "      <td>9</td>\n",
-       "      <td>2320</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>10049806</td>\n",
-       "      <td>MISSISSIPPI</td>\n",
-       "      <td>28</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>197207</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1700</td>\n",
-       "      <td>197207</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1700</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>10064819</td>\n",
-       "      <td>NEBRASKA</td>\n",
-       "      <td>31</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>197203</td>\n",
-       "      <td>2</td>\n",
-       "      <td>700</td>\n",
-       "      <td>197203</td>\n",
-       "      <td>2</td>\n",
-       "      <td>700</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>9978347</td>\n",
-       "      <td>ALABAMA</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>197205</td>\n",
-       "      <td>31</td>\n",
-       "      <td>1145</td>\n",
-       "      <td>197205</td>\n",
-       "      <td>31</td>\n",
-       "      <td>1145</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>10079162</td>\n",
-       "      <td>NEW HAMPSHIRE</td>\n",
-       "      <td>33</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 61 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   BEGIN_YEARMONTH  BEGIN_DAY  BEGIN_TIME  END_YEARMONTH  END_DAY  END_TIME  \\\n",
-       "0           197204          3        1840         197204        3      1840   \n",
-       "1           197201          9        2320         197201        9      2320   \n",
-       "2           197207          1        1700         197207        1      1700   \n",
-       "3           197203          2         700         197203        2       700   \n",
-       "4           197205         31        1145         197205       31      1145   \n",
-       "\n",
-       "   EPISODE_ID  EVENT_ID          STATE  STATE_FIPS  ...  FAT_YEARMONTH  \\\n",
-       "0         NaN   9983345       ARKANSAS           5  ...            NaN   \n",
-       "1         NaN  10049806    MISSISSIPPI          28  ...            NaN   \n",
-       "2         NaN  10064819       NEBRASKA          31  ...            NaN   \n",
-       "3         NaN   9978347        ALABAMA           1  ...            NaN   \n",
-       "4         NaN  10079162  NEW HAMPSHIRE          33  ...            NaN   \n",
-       "\n",
-       "  FAT_DAY FAT_TIME FATALITY_ID  FATALITY_TYPE FATALITY_DATE  FATALITY_AGE  \\\n",
-       "0     NaN      NaN         NaN            NaN           NaN           NaN   \n",
-       "1     NaN      NaN         NaN            NaN           NaN           NaN   \n",
-       "2     NaN      NaN         NaN            NaN           NaN           NaN   \n",
-       "3     NaN      NaN         NaN            NaN           NaN           NaN   \n",
-       "4     NaN      NaN         NaN            NaN           NaN           NaN   \n",
-       "\n",
-       "  FATALITY_SEX FATALITY_LOCATION EVENT_YEARMONTH  \n",
-       "0          NaN               NaN             NaN  \n",
-       "1          NaN               NaN             NaN  \n",
-       "2          NaN               NaN             NaN  \n",
-       "3          NaN               NaN             NaN  \n",
-       "4          NaN               NaN             NaN  \n",
-       "\n",
-       "[5 rows x 61 columns]"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
     "import gzip\n",
+    "import numpy as np\n",
+    "import glob\n",
     "\n",
-    "def load_df(file_path):\n",
+    "# define range of years\n",
+    "years = np.arange(1950,2023,1)\n",
+    "\n",
+    "#find datasets at datases folder based on regex\n",
+    "def find_dataset(regex):\n",
+    "    return glob.glob(\"datasets/{}\".format(regex))[0]\n",
+    "\n",
+    "# load dataset into pandas DF from gzip\n",
+    "def load_df(file_path,columns):\n",
     "    with gzip.open(file_path) as f:\n",
-    "        df = pd.read_csv(f)\n",
+    "        df = pd.read_csv(f, usecols=columns)\n",
     "    return df\n",
     "\n",
-    "storm_details_df = load_df('datasets/StormEvents_details-ftp_v1.0_d1972_c20220425.csv.gz')\n",
-    "storm_fatalities_df = load_df('datasets/StormEvents_fatalities-ftp_v1.0_d1972_c20220425.csv.gz')\n",
-    "storm_locations_df = load_df('datasets/StormEvents_locations-ftp_v1.0_d1972_c20220425.csv.gz')\n",
     "\n",
-    "storm_df = pd.merge(storm_details_df,storm_fatalities_df,how=\"left\",on=[\"EVENT_ID\"])\n",
-    "print(storm_details_df.shape)\n",
-    "print(storm_fatalities_df.shape)\n",
-    "storm_df.head()"
+    "def load_storm_dataset_data(pattern,columns):\n",
+    "    full_df = pd.DataFrame()\n",
+    "    for year in years:\n",
+    "        details_rgx = pattern.format(year)\n",
+    "        details_file_path = find_dataset(details_rgx)\n",
+    "        partial_df = load_df(details_file_path,columns)\n",
+    "        full_df = pd.concat([full_df,partial_df],axis=\"rows\")\n",
+    "    return full_df\n",
+    "\n",
+    "\n",
+    "def merge(df_tuple,column):\n",
+    "    return pd.merge(df_tuple[0],df_tuple[1],how=\"left\",on=[column])\n",
+    "  \n",
+    "details_rgx = \"StormEvents_details*d{}*.csv.gz\"\n",
+    "fatalities_rgx = \"StormEvents_fatalities*d{}*.csv.gz\"\n",
+    "\n",
+    "storm_details_columns = ['BEGIN_YEARMONTH','BEGIN_DAY','BEGIN_TIME','END_YEARMONTH','END_DAY','END_TIME','EPISODE_ID','EVENT_ID','STATE','YEAR','MONTH_NAME','EVENT_TYPE','INJURIES_DIRECT',\n",
+    "                         'INJURIES_INDIRECT','DEATHS_DIRECT','DEATHS_INDIRECT','DAMAGE_PROPERTY','DAMAGE_CROPS','MAGNITUDE','MAGNITUDE_TYPE','TOR_F_SCALE','TOR_LENGTH','TOR_WIDTH']\n",
+    "\n",
+    "storm_fatalities_columns = ['FATALITY_ID','EVENT_ID','FATALITY_TYPE','FATALITY_DATE','FATALITY_AGE','FATALITY_SEX','FATALITY_LOCATION']\n",
+    "\n",
+    "storm_details_df = load_storm_dataset_data(details_rgx,storm_details_columns)\n",
+    "storm_fatalities_df = load_storm_dataset_data(fatalities_rgx,storm_fatalities_columns)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "full_df = merge((storm_details_df,storm_fatalities_df), \"EVENT_ID\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1738389, 29)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cleaning dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
@@ -445,6 +324,13 @@
    "source": [
     "## Results\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
